--- a/index.html
+++ b/index.html
@@ -1,56 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comfy House</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Comfy House</title>
 
-    <!-- line awesome (font) -->
-    <link rel= "stylesheet" href= "assets/1.3.0/css/line-awesome.min.css" >
+		<!-- line awesome (font) -->
+		<link rel="stylesheet" href="assets/1.3.0/css/line-awesome.min.css" />
 
-    <!-- custom css -->
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-    <!-- navbar -->
-    <nav class="navbar">
-        <div class="navbar-center">
-            <span class="nav-icon">
-                <!-- <i class="fas fa-bars"></i> -->
-                <i class="las la-bars"></i>
-            </span>
+		<!-- custom css -->
+		<link rel="stylesheet" href="assets/css/style.css" />
+	</head>
+	<body>
+		<!-- navbar -->
+		<nav class="navbar">
+			<div class="navbar-center">
+				<span class="nav-icon">
+					<!-- <i class="fas fa-bars"></i> -->
+					<i class="las la-bars"></i>
+				</span>
 
-            <img src="./assets/images/logo.svg" alt="store logo">
+				<img src="./assets/images/logo.svg" alt="store logo" />
 
-            <div class="cart-btn">
-                <span class="nav-icon">
-                    <!-- <i class="fas-fa-cart-plus"></i> -->
-                    <i class="las la-cart-plus"></i>
-                </span>
-                <div class="cart-items">0</div>
-            </div>
-        </div>
-    </nav>
-    <!-- end of navbar -->
+				<div class="cart-btn">
+					<span class="nav-icon">
+						<!-- <i class="fas-fa-cart-plus"></i> -->
+						<i class="las la-cart-plus"></i>
+					</span>
+					<div class="cart-items">0</div>
+				</div>
+			</div>
+		</nav>
+		<!-- end of navbar -->
 
-    <!-- hero -->
-    <header class="hero">
-        <div class="banner">
-            <h1 class="banner-title">furniture collection</h1>
-            <button class="banner-btn">shop now</button>
-        </div>
-    </header>
-    <!-- end of hero -->
+		<!-- hero -->
+		<header class="hero">
+			<div class="banner">
+				<h1 class="banner-title">furniture collection</h1>
+				<button class="banner-btn">shop now</button>
+			</div>
+		</header>
+		<!-- end of hero -->
 
-    <!-- products -->
-    <section class="products">
-        <div class="section-title">
-            <h2>Our Products</h2>
-        </div>
+		<!-- products -->
+		<section class="products">
+			<div class="section-title">
+				<h2>Our Products</h2>
+			</div>
 
-        <div class="products-center">
-            <!-- single product -->
-            <!-- <article class="product">
+			<div class="products-center">
+				<!-- single product -->
+				<!-- <article class="product">
                 <div class="img-container">
                     <img src="./images/product-1.jpeg" alt="product" class="product-img">
                     <button class="bag-btn" data-id="1">
@@ -62,24 +62,24 @@
                 <h3>queen bed</h3>
                 <h4>$16</h4>
             </article> -->
-            <!-- end of single product -->
-        </div>
-    </section>
-    <!-- end of products -->
+				<!-- end of single product -->
+			</div>
+		</section>
+		<!-- end of products -->
 
-    <!-- cart -->
-    <div class="cart-overlay">
-        <div class="cart">
-            <span class="close-cart">
-                <!-- <i class="las la-window-close"></i> -->
-                <i class="lar la-window-close"></i>
-            </span>
+		<!-- cart -->
+		<div class="cart-overlay">
+			<div class="cart">
+				<span class="close-cart">
+					<!-- <i class="las la-window-close"></i> -->
+					<i class="lar la-window-close"></i>
+				</span>
 
-            <h2>your cart</h2>
+				<h2>your cart</h2>
 
-            <div class="cart-content">
-                <!-- cart item -->
-                <!-- <div class="cart-item">
+				<div class="cart-content">
+					<!-- cart item -->
+					<!-- <div class="cart-item">
                     <img src="./images/product-1.jpeg" alt="product" style="outline: 1px solid yellowgreen;">
                     <div class="" style="outline: 1px solid yellowgreen;">
                         <h4>queen bed</h4>
@@ -92,17 +92,17 @@
                         <i class="las la-chevron-down" data-id="1"></i>
                     </div>
                 </div> -->
-                <!-- end of cart item -->
-            </div>
-            
-            <div class="cart-footer">
-                <h3>your total : $<span class="cart-total">0</span></h3>
-                <button class="clear-cart banner-btn">clear cart</button>
-            </div>
-        </div>
-    </div>
-    <!-- end of cart -->
+					<!-- end of cart item -->
+				</div>
 
-    <script src="/assets/js/app.js"></script>
-</body>
+				<div class="cart-footer">
+					<h3>your total : $<span class="cart-total">0</span></h3>
+					<button class="clear-cart banner-btn">clear cart</button>
+				</div>
+			</div>
+		</div>
+		<!-- end of cart -->
+
+		<script src="assets/js/app.js"></script>
+	</body>
 </html>
