--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
 		</div>
 		<!-- end of cart -->
 
-		<script src="./assets/js/app.js"></script>
+		<script src="./assets/js/app.js" type="text/Javascript"></script>
 	</body>
 </html>
